2017-06-28

	* version 3.6.0

2017-06-28

	* manual/ja/sylpheed.sgml: updated.

2017-06-12

	* version 3.6.0beta1

2017-06-12

	* src/printing.c: disable save/load of printing settings on
	  GTK+ <= 2.10.

2017-06-09

	* src/printing.c: save/load printing settings and page setup.

2017-03-22

	* src/about.c
	  src/sylpheed.rc.in: updated copyright year.

2017-02-28

	* manual/ja/sylpheed.sgml: updated.

2017-02-24

	+ libsylph/libsylph-0.def: export procmime_scan_message_stream.

2017-02-20

	* src/prefs_account_dialog.c: fixed sensitivity change of signature
	  settings.

2017-02-20

	* configure.ac: increased the version.

2017-02-17

	* manual/ja/sylpheed.sgml: added 'Other features' section.

2017-02-17

	* libsylph/imap.c: subscribe newly created folders since they are
	  not always subscribed automatically.

2017-02-17

	* src/undo.c: made debug print switchable.

2017-02-16

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2017-02-16

	* src/editgroup.c: modified next selection after move.
	  Added folder icons.

2017-02-15

	* src/editgroup.c: expand the tree when moving email from group to
	  available list.

2017-02-15

	* src/editgroup.c: show available email list with folder tree.

2017-02-10

	* src/editgroup.c: fixed selection after multiple move.

2017-02-10

	* src/editgroup.c: replaced GTKCList with GtkTreeView and also
	  enabled multiple selection.

2017-02-07

	* libsylph/prefs_account.[ch]
	  src/compose.[ch]
	  src/prefs_account_dialog.c
	  src/prefs_ui.[ch]: implemented multiple signatures in one account.

2017-02-02

	* libsylph/ssl.c: supported the location of SSL certificates on
	  OpenBSD (thanks to Amit Kulkarni) (#222).

2017-02-02

	* libsylph/utils.c: execute_open_file(): unix: implemented using
	  xdg-open.
	  src/mainwindow.c: added the following menus:
	  /Tools/Open configuration folder
	  /Tools/Open attachments folder

2017-02-02

	* nsis/COPYING.ja.txt
	  nsis/COPYING.txt
	  nsis/english.nsh
	  nsis/japanese.nsh