@@ -1,3 +1,8 @@
+2017-07-07
+
+	* plugin/test/test.c: made app_exit_handler_id static to prevent conflicts
+	  of symbols.
+
 2017-06-28
 
 	* version 3.6.0
